# ct-salto-sync

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  config.example.yaml
.sqlx/: query-2d6bd0d8fb017f8ae9cbe11859388dca81235685cee95c44a9e5a6c2a2de9aca.json  query-995cf95c19123c45644c0d94bdc445d8b733d087b3d9f5db7efafdac29edf8de.json  query-cb0bf6d14a48045e6ee44c33696da4732c3c63573dd85b39ffb1ef2934d4b172.json  query-f16d78dd3660e2992e392868f3823eada13274e6d67f768f28378e0a04a2621a.json
migrations/: 20251117140410_bookings.up.sql  20251205125838_staging.down.sql  20251205125838_staging.up.sql
src/: config.rs  ct.rs  db.rs  main.rs  pull_bookings.rs  salto.rs  write_staging.rs
