[package]
name = "salto-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["time", "env-filter"] }
