[package]
name = "salto-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["time", "env-filter"] }
